# agent-cloud

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  pyproject.toml
services/backend/: README.md  pyproject.toml
services/backend/alembic/: env.py
services/backend/alembic/versions/: 01eb13f3a1e0_initial_schema.py  118b49942e83_add_active_sandbox_per_user_unique_index.py  59592b11f009_add_sandbox_registry.py  7a1b2c3d4e5f_add_skills_tables.py  a1b2c3d4e5f6_session_last_context_tokens.py  b1c2d3e4f5a6_scheduled_tasks.py  c1d2e3f4a5b6_session_summary_fields.py  c2d3e4f5a6b7_notifications.py  c3d4e5f6a7b8_user_models.py  d2e3f4a5b6c7_auth.py  d5e6f7a8b9c0_sandbox_auth_token.py  e3f4a5b6c7d8_provider_credentials.py  f1a2b3c4d5e6_session_models.py  f4a5b6c7d8e9_memory_versioning.py
services/backend/src/agent_cloud_backend/: config.py  crypto.py  db.py  main.py
services/backend/src/agent_cloud_backend/api/: agent_configs.py  agent_skills.py  app_version.py  auth.py  context_documents.py  credentials.py  deps.py  files.py  memory_entries.py  messages.py  notifications.py  ownership.py  platform.py  push.py  scheduled_tasks.py  sessions.py  skills.py  terminal.py  turn.py  user_models.py  users.py
services/backend/src/agent_cloud_backend/auth/: security.py
services/backend/src/agent_cloud_backend/files/: deps.py  errors.py  store.py
services/backend/src/agent_cloud_backend/models/: __init__.py  agent_config.py  base.py  context_document.py  memory_entry.py  message.py  notification.py  provider_credential.py  refresh_token.py  sandbox_registry.py  scheduled_task.py  session.py  skill.py  user.py  user_model.py
services/backend/tests/: conftest.py  test_agent_skills_api.py  test_api.py  test_app_version.py  test_assemble.py  test_assemble_scheduled.py  test_auth.py  test_authz.py  test_compact_api.py  test_compaction.py  test_config.py  test_config_scheduler.py  test_config_thresholds.py  test_credentials_api.py  test_crypto.py  test_docker_provisioner.py  test_docker_sandbox_isolation.py  test_files_api.py  test_filestore.py  test_fold_boundary.py  test_headless_turn.py  test_health.py  test_inprocess_provisioner.py  test_lifecycle_api.py  test_memory_api.py  test_memory_extract_orch.py  test_memory_repo.py  test_message_actions.py  test_migration.py  test_models_api.py  test_models_create.py  test_notification_model.py  test_notification_repo.py  test_notifications_api.py  test_notify_apply.py  test_object_store.py  test_per_user_routing_e2e.py  test_push_ws.py  test_reaper_loop.py  test_repo_entities.py  (+38 more)
services/worker/: README.md  pyproject.toml
services/worker/scripts/: smoke_openai.py
services/worker/src/agent_cloud_worker/: __init__.py  __main__.py  client_actions.py  config.py  context.py  danger.py  factory.py  image_gen.py  keepwarm.py  loop.py  memory_extract.py  notify.py  openai_provider.py  provider.py  remember.py  sandbox_executor.py  schedule_task.py  server.py  subagent.py  title.py  todos.py  tools.py  ttft.py  web_search.py
services/worker/tests/: test_client_actions.py  test_config.py  test_context.py  test_danger.py  test_factory.py  test_image_gen.py  test_keepwarm.py  test_loop.py  test_loop_subagent_stream.py  test_memory_extract.py  test_notify.py  test_openai_mapping.py  test_openai_provider.py  test_provider.py  test_remember.py  test_sandbox_executor.py  test_schedule_task.py  test_server_provider_error.py  test_subagent.py  test_terminal_bridge.py  test_title.py  test_todos.py  test_tool_filtering.py  test_tools.py  test_ttft.py  test_web_search.py  test_worker_server.py
(+444 files in other folders)
