[project]
name = "agent-cloud-backend"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg",
    "alembic",
    "pydantic>=2",
    "pydantic[email]",
    "pydantic-settings",
    "grpcio",
    "agent-cloud-common",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_cloud_backend"]

[tool.uv.sources]
agent-cloud-common = { workspace = true }
agent-cloud-worker = { workspace = true }
agent-cloud-sandbox = { workspace = true }

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "testcontainers[postgres]",
    "psycopg2-binary",
    "ruff",
    "agent-cloud-worker",
    "agent-cloud-sandbox",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["src"]
