[project]
name = "agent-cloud-backend"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg",
    "alembic",
    "pydantic>=2",
    "pydantic[email]",
    "pydantic-settings",
    "pyyaml",
    "python-multipart",
    "grpcio",
    "agent-cloud-common",
    "docker>=7.1.0",
    "pyjwt>=2.13.0",
    "argon2-cffi>=25.1.0",
    "cryptography>=43",
    "croniter>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_cloud_backend"]

[tool.uv.sources]
agent-cloud-common = { workspace = true }
agent-cloud-worker = { workspace = true }
agent-cloud-sandbox = { workspace = true }

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "testcontainers[postgres]",
    "psycopg2-binary",
    "ruff",
    "agent-cloud-worker",
    "agent-cloud-sandbox",
    "pytest-timeout>=2.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["src"]
markers = [
    "docker: needs a real Docker daemon + agent-cloud-sandbox image",
    "real_title: exercises the real session-title pipeline (others get a no-op spawn)",
]
